# soleana

./: Cargo.toml  README.md
soleana/: Cargo.toml
soleana-tui/: Cargo.toml
soleana-tui/src/: input.rs  main.rs  transactions.rs  utils.rs
soleana-web/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
soleana-web/src/: app.rs  lib.rs  main.rs
soleana-web/src/components/: header.rs
soleana-web/style/output/: tailwind.css
soleana/benches/: base.rs  basic.rs
soleana/examples/: basic.rs  contract_impl.rs  extended.rs  lut.rs  program_impl.rs
soleana/src/: error.rs  lib.rs  model.rs  prelude.rs  program.rs  reader.rs  registry.rs  types.rs
soleana/src/instructions/: mod.rs  system.rs
soleana/src/programs/: compute_budget.rs  mod.rs  system.rs
src/: error.rs  lib.rs  reader.rs
