[workspace]
members = [
    "soleana",
    "soleana-tui",
    "soleana-web",
]

[workspace.package]
version = "0.1.0"
authors = ["Beta <levbetaq@gmail.com>"]
homepage = "https://github.com/levbeta/soleana"
readme = "README.md"
keywords = [
    "solana",
    "transaction",
    "parser",
    "parsing",
    "blockchain",
]
categories = [
    "cryptography",
    "parsing",
    "blockchain",
]
license = "MIT"
repository = "https://github.com/levbeta/soleana"
edition = "2021"

[workspace.dependencies]
solana-message = "2.4.0"
solana-sdk = "2.2.2"
thiserror = "2.0.12"
