[workspace]
members = [
    "soleana",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Beta <levbetaq@gmail.com>"]
license = "MIT"
repository = "https://github.com/levbeta/soleana"
homepage = "https://github.com/levbeta/soleana"
readme = "README.md"
keywords = ["solana", "transaction", "parser", "parsing", "blockchain"]
categories = ["cryptography", "parsing", "blockchain"]

[workspace.dependencies]
solana-message = "2.4.0"
solana-sdk = "2.2.2"
thiserror = "2.0.12"

