[package]
name = "soleana"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Soleana is a lightweight and lightning-fast Solana transaction parser."


[dependencies]

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "basic"
harness = false